# PersonalAssistantAI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 12a37982b0a1_add_tasks_table.py  3499480444cb_add_conversations_and_messages.py  f43a969e0232_initial_schema.py
backend/app/: main.py
backend/app/api/: auth.py  calendar.py  chat.py  dashboard.py  email.py  meetings.py  oauth.py  tasks.py  travel.py
backend/app/core/: config.py  database.py  encryption.py  security.py
backend/app/integrations/: anthropic_client.py  gmail.py  google_calendar.py  microsoft_graph.py  outlook_calendar.py
backend/app/models/: __init__.py  audit_log.py  conversation.py  oauth_token.py  task.py  travel.py  user.py
backend/app/services/: calendar_service.py  chat_service.py  dashboard_service.py  email_service.py  meeting_service.py  task_service.py  travel_service.py
backend/scripts/: create_admin.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/calendar/: page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: api.ts
frontend/src/stores/: auth-store.ts
frontend/src/types/: calendar.ts  chat.ts  email.ts  task.ts  travel.ts
(+7 files in other folders)
